reorganizes notebook and adds more comments to explain taken steps

--- a/Capstone Project Template.ipynb
+++ b/Capstone Project Template.ipynb
@@ -4,18 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project Title\n",
     "### Data Engineering Capstone Project\n",
     "\n",
-    "#### Project Summary\n",
-    "--describe your project at a high level--\n",
-    "\n",
-    "The project follows the follow steps:\n",
-    "* Step 1: Scope the Project and Gather Data\n",
+    "The project follows the following steps:\n",
+    "* Step 1: Scope the Project and Gather Data (see `README.md`)\n",
     "* Step 2: Explore and Assess the Data\n",
-    "* Step 3: Define the Data Model\n",
-    "* Step 4: Run ETL to Model the Data\n",
-    "* Step 5: Complete Project Write Up"
+    "* Step 3: Define the Data Model (see `README.md`)\n",
+    "* Step 4: Run ETL to Model the Data (see `etl.py`)\n",
+    "* Step 5: Complete Project Write Up (see `README.md`)"
    ]
   },
   {
@@ -50,89 +46,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Start loading immigration data\n",
-      "INFO:root:Start processing fact_im\n",
-      "INFO:root:Start processing dim_im_person\n",
-      "INFO:root:Start processing dim_im_airline\n"
-     ]
-    }
-   ],
    "source": [
-    "process_immigration(spark, \"source-bucket-capstone\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_spark = spark.read.format('com.github.saurfang.sas.spark').load('../../data/18-83510-I94-Data-2016/i94_apr16_sub.sas7bdat')\n",
-    "#df_spark = spark.read.format('com.github.saurfang.sas.spark').load('../../data/18-83510-I94-Data-2016/*.sas7bdat')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#write to parquet\n",
-    "#df_spark.write.parquet(\"sas_data\")\n",
-    "df_spark=spark.read.parquet(\"sas_data\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Row(cicid=5748517.0, i94yr=2016.0, i94mon=4.0, i94cit=245.0, i94res=438.0, i94port='LOS', arrdate=20574.0, i94mode=1.0, i94addr='CA', depdate=20582.0, i94bir=40.0, i94visa=1.0, count=1.0, dtadfile='20160430', visapost='SYD', occup=None, entdepa='G', entdepd='O', entdepu=None, matflag='M', biryear=1976.0, dtaddto='10292016', gender='F', insnum=None, airline='QF', admnum=94953870030.0, fltno='00011', visatype='B1')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_spark.head()"
+    "### Taking a closer look at the dataframes\n",
+    "\n",
+    "- reading in the different data formats\n",
+    "- checking their shape, datatypes and information"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 1: Scope the Project and Gather Data\n",
-    "\n",
-    "#### Scope \n",
-    "Explain what you plan to do in the project in more detail. What data do you use? What is your end solution look like? What tools did you use? etc>\n",
-    "\n",
-    "#### Describe and Gather Data \n",
-    "Describe the data sets you're using. Where did it come from? What type of information is included? "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 2: Explore and Assess the Data\n",
-    "#### Explore the Data \n",
-    "Identify data quality issues, like missing values, duplicate data, etc.\n",
-    "\n",
-    "#### Cleaning Steps\n",
-    "Document steps necessary to clean the data"
+    "1. Immigration data set"
    ]
   },
   {
@@ -467,7 +394,15 @@
     }
    ],
    "source": [
+    "# checking if id column contains only unique values\n",
     "df_im[\"cicid\"].nunique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Dividing Immigration data set into a fact and two dimension tables"
    ]
   },
   {
@@ -489,7 +424,9 @@
    ],
    "source": [
     "fact_im = df_im[['cicid', 'i94yr', 'i94mon',  'i94port', 'arrdate', 'i94mode', 'i94addr', 'depdate', 'i94visa']]\n",
+    "# renaming columns to more understandable names\n",
     "fact_im.rename(columns= {\"cicid\": \"immigration_id\", \"i94yr\": \"year\", \"i94mon\": \"month\", \"i94port\":\"city_code\", \"i94addr\":\"state_code\", \"arrdate\": \"arrival_date\", \"depdate\": \"departure_date\", \"i94mode\": \"transportation_mode\", \"i94visa\": \"visa\"}, inplace = True)\n",
+    "# ordering columns\n",
     "fact_im = fact_im[[\"immigration_id\", \"year\", \"month\", \"city_code\", \"state_code\", \"arrival_date\", \"departure_date\", \"transportation_mode\", \"visa\"]]"
    ]
   },
@@ -621,6 +558,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dimension table dim_im_person gathers person related information from the immigration data set'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -639,6 +583,7 @@
    ],
    "source": [
     "dim_im_person = df_im[[\"cicid\", \"i94cit\", \"i94res\", \"biryear\", \"gender\"]]\n",
+    "# renaming columns\n",
     "dim_im_person.rename(columns= {\"cicid\": \"immigration_id\", \"i94cit\": \"citizen_country\", \"i94res\": \"residence_country\", \"biryear\": \"birth_year\"}, inplace= True)"
    ]
   },
@@ -739,6 +684,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dimension table dim_im_airline gathers information related to the airline of the immigration data set."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -757,6 +709,7 @@
    ],
    "source": [
     "dim_im_airline = df_im[[\"cicid\", \"airline\", \"fltno\", \"visatype\"]]\n",
+    "# renaming columns\n",
     "dim_im_airline.rename(columns={\"cicid\": \"immigration_id\", \"fltno\": \"flight_number\", \"visatype\": \"visa_type\"}, inplace = True)"
    ]
   },
@@ -854,7 +807,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Temperature Data Set"
+    "### 2. Temperature Data Set"
    ]
   },
   {
@@ -863,6 +816,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# reading in temperature data set\n",
     "fname = '../../data2/GlobalLandTemperaturesByCity.csv'\n",
     "df_temp = pd.read_csv(fname)"
    ]
@@ -1128,13 +1082,15 @@
     }
    ],
    "source": [
-    "# filter data set for US data\n",
+    "# filter data set for US data as immigration data only contains US data\n",
     "df_temp = df_temp[df_temp['Country'] == 'United States']\n",
+    "# convert SAS dates into pandas datetime data types\n",
     "df_temp['dt'] = pd.to_datetime(df_temp['dt'])\n",
     "df_temp['year'] = df_temp['dt'].apply(lambda dt: dt.year)\n",
     "df_temp['month'] = df_temp['dt'].apply(lambda dt: dt.month)\n",
     "\n",
     "dim_temp = df_temp\n",
+    "# rename columns\n",
     "dim_temp.rename(columns= {\"dt\": \"date\", \"AverageTemperature\": \"avg_temperature\", \"AverageTemperatureUncertainty\": \"avg_temp_uncertainty\"}, inplace= True)\n",
     "dim_temp.head()"
    ]
@@ -1143,7 +1099,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Demography Data Set"
+    "### 3. Demography Data Set"
    ]
   },
   {
@@ -1295,161 +1251,17 @@
     }
    ],
    "source": [
+    "# reading in demography data set\n",
     "df_demog = pd.read_csv('us-cities-demographics.csv', delimiter=';')\n",
-    "df_demog.head(5)"
+    "df_demog.head(5)dim_demog = df_demog\n",
+    "dim_demog.head()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>City</th>\n",
-       "      <th>State</th>\n",
-       "      <th>Median Age</th>\n",
-       "      <th>Male Population</th>\n",
-       "      <th>Female Population</th>\n",
-       "      <th>Total Population</th>\n",
-       "      <th>Number of Veterans</th>\n",
-       "      <th>Foreign-born</th>\n",
-       "      <th>Average Household Size</th>\n",
-       "      <th>State Code</th>\n",
-       "      <th>Race</th>\n",
-       "      <th>Count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Silver Spring</td>\n",
-       "      <td>Maryland</td>\n",
-       "      <td>33.8</td>\n",
-       "      <td>40601.0</td>\n",
-       "      <td>41862.0</td>\n",
-       "      <td>82463</td>\n",
-       "      <td>1562.0</td>\n",
-       "      <td>30908.0</td>\n",
-       "      <td>2.60</td>\n",
-       "      <td>MD</td>\n",
-       "      <td>Hispanic or Latino</td>\n",
-       "      <td>25924</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Quincy</td>\n",
-       "      <td>Massachusetts</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>44129.0</td>\n",
-       "      <td>49500.0</td>\n",
-       "      <td>93629</td>\n",
-       "      <td>4147.0</td>\n",
-       "      <td>32935.0</td>\n",
-       "      <td>2.39</td>\n",
-       "      <td>MA</td>\n",
-       "      <td>White</td>\n",
-       "      <td>58723</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Hoover</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>38.5</td>\n",
-       "      <td>38040.0</td>\n",
-       "      <td>46799.0</td>\n",
-       "      <td>84839</td>\n",
-       "      <td>4819.0</td>\n",
-       "      <td>8229.0</td>\n",
-       "      <td>2.58</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>Asian</td>\n",
-       "      <td>4759</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Rancho Cucamonga</td>\n",
-       "      <td>California</td>\n",
-       "      <td>34.5</td>\n",
-       "      <td>88127.0</td>\n",
-       "      <td>87105.0</td>\n",
-       "      <td>175232</td>\n",
-       "      <td>5821.0</td>\n",
-       "      <td>33878.0</td>\n",
-       "      <td>3.18</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>Black or African-American</td>\n",
-       "      <td>24437</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Newark</td>\n",
-       "      <td>New Jersey</td>\n",
-       "      <td>34.6</td>\n",
-       "      <td>138040.0</td>\n",
-       "      <td>143873.0</td>\n",
-       "      <td>281913</td>\n",
-       "      <td>5829.0</td>\n",
-       "      <td>86253.0</td>\n",
-       "      <td>2.73</td>\n",
-       "      <td>NJ</td>\n",
-       "      <td>White</td>\n",
-       "      <td>76402</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               City          State  Median Age  Male Population  \\\n",
-       "0     Silver Spring       Maryland        33.8          40601.0   \n",
-       "1            Quincy  Massachusetts        41.0          44129.0   \n",
-       "2            Hoover        Alabama        38.5          38040.0   \n",
-       "3  Rancho Cucamonga     California        34.5          88127.0   \n",
-       "4            Newark     New Jersey        34.6         138040.0   \n",
-       "\n",
-       "   Female Population  Total Population  Number of Veterans  Foreign-born  \\\n",
-       "0            41862.0             82463              1562.0       30908.0   \n",
-       "1            49500.0             93629              4147.0       32935.0   \n",
-       "2            46799.0             84839              4819.0        8229.0   \n",
-       "3            87105.0            175232              5821.0       33878.0   \n",
-       "4           143873.0            281913              5829.0       86253.0   \n",
-       "\n",
-       "   Average Household Size State Code                       Race  Count  \n",
-       "0                    2.60         MD         Hispanic or Latino  25924  \n",
-       "1                    2.39         MA                      White  58723  \n",
-       "2                    2.58         AL                      Asian   4759  \n",
-       "3                    3.18         CA  Black or African-American  24437  \n",
-       "4                    2.73         NJ                      White  76402  "
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "dim_demog = df_demog\n",
-    "dim_demog.head()"
+    "Checking how the demography data set is constructed. All values are unique for city and race combinations. If one isn't interested in the count column, race or city then those columns can be neglected and the state code is sufficient as unique identifer"
    ]
   },
   {
@@ -1735,6 +1547,7 @@
     }
    ],
    "source": [
+    "# only selecting columns that are unique per state\n",
     "dim_demog_state = dim_demog[[\"State Code\", \"State\", \"Median Age\", \"Male Population\", \"Female Population\", \"Total Population\", \"Number of Veterans\", \"Foreign-born\", \"Average Household Size\"]]\n",
     "dim_demog_state.head()"
    ]
@@ -1743,7 +1556,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Airport Codes Data Set"
+    "### 4. Airport Codes Data Set"
    ]
   },
   {
@@ -1895,6 +1708,7 @@
     }
    ],
    "source": [
+    "# reading in airport data\n",
     "df_airport = pd.read_csv(\"airport-codes_csv.csv\")\n",
     "df_airport.head()\n",
     "\n",
@@ -1903,17 +1717,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Perform Data Cleaning Steps"
+    "# Perform Data Cleaning Steps"
    ]
   },
   {
@@ -2059,7 +1866,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get information for codes (country, city, state)"
+    "### Get information for codes (country, city, state)\n",
+    "\n",
+    "This information is derived from the labels of the immigration data set."
    ]
   },
   {
@@ -2331,7 +2140,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### convert state and city to upper case in the demography and temp data set "
+    "### convert state and city to upper case in the demography and temp data set \n",
+    "\n",
+    "This makes it possible to map those columns to the fact_im table"
    ]
   },
   {
@@ -2606,66 +2417,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 3: Define the Data Model\n",
-    "#### 3.1 Conceptual Data Model\n",
-    "Map out the conceptual data model and explain why you chose that model\n",
-    "\n",
-    "The chosen data model is a star schema as the designed purpose of it are BI and analysis tasks.\n",
-    "\n",
-    "#### 3.2 Mapping Out Data Pipelines\n",
-    "List the steps necessary to pipeline the data into the chosen data model\n",
-    "\n",
-    "1. The data loaded in the workspace is used\n",
-    "\n",
-    "2. The immigration data is loaded into a spark dataframe\n",
-    "    - Created tables are: \n",
-    "        - fact table immigration\n",
-    "        - dim table person\n",
-    "        - dim table airline\n",
-    "    - the final tables are stored in the \"output_data\" dir\n",
-    "3. The temperature data is loaded into a spark dataframe\n",
-    "    - dim table temperature\n",
-    "    - the final tables are stored in the \"output_data\" dir\n",
-    "4. The demography data is loaded into a spark dataframe\n",
-    "    - dim table demography\n",
-    "    - the final tables are stored in the \"output_data\" dir\n",
-    "4. Extract helper tables from immigration label description. The labels data is loaded into a spark dataframe\n",
-    "    - created helper tables are: \n",
-    "        - Country Code\n",
-    "        - City Code\n",
-    "        - State Code\n",
-    "    - the final tables are stored in the \"output_data\" dir\n",
-    "        \n",
-    "Note: \n",
-    "to use S3 instead of the workspace to load the data the following steps are required:\n",
-    "    - define the source bucket in the `config.cfg` file\n",
-    "    - upload the immigration data set and its labels description \n",
-    "    - upload the temperature data set\n",
-    "    - and the demography data set"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 4: Run Pipelines to Model the Data \n",
-    "#### 4.1 Create the data model\n",
-    "Build the data pipelines to create the data model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Write code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### 4.2 Data Quality Checks\n",
     "Explain the data quality checks you'll perform to ensure the pipeline ran as expected. These could include:\n",
     " * Integrity constraints on the relational database (e.g., unique key, data type, etc.)\n",
@@ -2683,69 +2434,6 @@
    "source": [
     "# Perform quality checks here"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 4.3 Data dictionary \n",
-    "Create a data dictionary for your data model. For each field, provide a brief description of what the data is and where it came from. You can include the data dictionary in the notebook or in a separate file."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Step 5: Complete Project Write Up\n",
-    "* Clearly state the rationale for the choice of tools and technologies for the project.\n",
-    "* Propose how often the data should be updated and why.\n",
-    "* Write a description of how you would approach the problem differently under the following scenarios:\n",
-    " * The data was increased by 100x.\n",
-    " * The data populates a dashboard that must be updated on a daily basis by 7am every day.\n",
-    " * The database needed to be accessed by 100+ people."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
