adds a third data quality check

--- a/Data_Quality_Checks.ipynb
+++ b/Data_Quality_Checks.ipynb
@@ -55,6 +55,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Check: checks if the tables are created as expected"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -130,6 +137,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Check: checks if tables are empty"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -160,11 +174,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Check: checks if the number of records equals the expected number of records in each table"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "expected_counts = {\n",
+    "    \"fact_im\": 3096313,\n",
+    "    \"dim_im_person\": 3096313,\n",
+    "    \"dim_im_airline\": 3096313,\n",
+    "    \"dim_temp\": 687289,\n",
+    "    \"country_code\": 288,\n",
+    "    \"state_code\": 54,\n",
+    "    \"city_code\": 659\n",
+    "}\n",
+    "\n",
+    "for table_dir in os.listdir(root_output_dir):\n",
+    "    path = os.path.join(root_output_dir, table_dir)\n",
+    "    df = spark.read.parquet(path)\n",
+    "    table_name = path.split('/')[-1]\n",
+    "    expected_count = expected_counts.get(table_name, None)\n",
+    "    if expected_count is not None:\n",
+    "        if record_num != expected_count:\n",
+    "            raise ValueError(f\"Data completeness check failed for {table_name}. Expected {expected_count}, but found {record_num}.\")\n",
+    "        else:\n",
+    "            print(f\"Data completeness check passed for {table_name}.\")\n",
+    "    else:\n",
+    "        print(f\"No expected count provided for {table_name}, skipping completeness check.\")"
+   ]
   }
  ],
  "metadata": {
